--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 # pip distribution folder
 dist/
 
+# training logs
+saved_energies/
+traj_norm/
+ld_anneal_toolhang/
 # local test dataset that is lazily downloaded by example scripts
 tests/assets/test.hdf5
 tests/assets/test_v141.hdf5
